src/test/resources/testinput/parsable/symtab/invalid_coco/let4.ocl
/* (c) https://github.com/MontiCore/monticore */
ocl let4 {
  inv:
    5 == (let
      x = 2 + 3
      in
      x);
}
